# practice_c

./: CMakeLists.txt  a.out  bianweici.cpp  bianweici_1.cpp  check_s.cpp  dna.txt  find_and_delete.cpp  find_and_delete_1.cpp  find_max_.cpp  find_max_1.cpp  freqs_.cpp  freqs_1.cpp  get_weekday_.cpp  get_weekday_1.cpp  insert_value.cpp  insert_value_1.cpp  parent.cpp  parent_1.cpp  split_nums.cpp  split_nums_1.cpp  tail.cpp  test.txt  test_file_op.cpp
