cmake_minimum_required(VERSION 3.15)
project(ky)

set(CMAKE_CXX_STANDARD 14)

add_executable(ky get_weekday_.cpp bianweici.cpp insert_value.cpp freqs_.cpp check_s.cpp parent.cpp split_nums.cpp find_max_.cpp find_and_delete.cpp find_and_delete_1.cpp find_max_1.cpp freqs_1.cpp insert_value_1.cpp parent_1.cpp split_nums_1.cpp bianweici_1.cpp get_weekday_1.cpp test_file_op.cpp)